<resources>
    <string name="app_name">Blog Nest</string>

    <string name="share_your_story">Share your story with us.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="newHere">New here?</string>
    <string name="designBy_1">Design by\nNITK</string>
    <string name="hintName">Enter Your Name</string>
    <string name="hintEmail">Enter Your Email</string>
    <string name="hintPassword">Enter Your Password</string>
    <string name="bloggerTitle">Blogger title</string>
    <string name="bloggerName">Blogger name </string>
    <string name="bloggerText">Blogger text here ......</string>
    <string name="likeText">0</string>
    <string name="readMore">Read more</string>
    <string name="date">Feb 25,2024</string>
    <string name="search">Search...</string>
    <string name="addBlogHere">Add new blog here </string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="OpenDrawer">OpenDrawer</string>
    <string name="CloseDrawer">CloseDrawer</string>
    <string name="delete_msg">Do you want to remove article !!</string>
    <string name="age">Enter the Age</string>
    <string name="next">Next</string>

</resources>