<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignInActivity">
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/blog_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0.3"
        android:scaleType="centerCrop"
        />
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/blogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="60sp"
            app:fontFamily="@font/love_ya_like_a_sister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/shareText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="450dp"
        android:minWidth="350dp"
        android:padding="5dp"
        android:text="@string/share_your_story"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:fontFamily="@font/love_ya_like_a_sister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blogText" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:maxWidth="450dp"
        android:minWidth="350dp"
        app:layout_constraintTop_toBottomOf="@id/shareText"
        app:layout_constraintEnd_toEndOf="@+id/shareText"
        app:layout_constraintStart_toStartOf="@+id/shareText">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawableTint="@color/black"
                android:drawablePadding="15dp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPassword"
            android:layout_marginTop="5dp"
            app:boxStrokeWidth="2dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableTint="@color/black"
                android:drawableStart="@drawable/password"
                android:drawablePadding="15dp"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@id/logInBtn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginTop="20dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designBy_1"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@+id/linear"
                app:layout_constraintEnd_toEndOf="@+id/linear"
                app:layout_constraintTop_toBottomOf="@+id/linear"
                android:layout_marginTop="90dp"
                />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>











</androidx.constraintlayout.widget.ConstraintLayout>