<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/blog_bg"
                android:scaleType="centerCrop"
                android:alpha="0.3"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/blogText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="60sp"
                app:fontFamily="@font/love_ya_like_a_sister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/shareText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/share_your_story"
                android:textAlignment="center"
                android:textSize="30sp"
                app:fontFamily="@font/love_ya_like_a_sister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/blogText" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/profile_avtar"
                app:civ_border_color="@color/blue"
                app:civ_border_overlay="true"
                app:civ_border_width="5dp"
                app:civ_circle_background_color="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shareText"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="-40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/add"
                app:civ_circle_background_color="@color/blue"
                app:layout_constraintStart_toStartOf="@id/profilePic"
                app:layout_constraintTop_toBottomOf="@id/profilePic" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePic">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtName"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_style"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/love_ya_like_a_sister"
                    android:hint="@string/hintName"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:inputType="text"
                    android:background="@drawable/edit_text_style"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="20dp"
                    android:fontFamily="@font/love_ya_like_a_sister"
                    android:hint="@string/hintEmail"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_style"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="20dp"
                    android:inputType="textPassword"
                    android:fontFamily="@font/love_ya_like_a_sister"
                    android:hint="@string/hintPassword"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>



            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/newHereText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/love_ya_like_a_sister"
                    android:text="@string/newHere"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/registerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_style"
                    android:backgroundTint="@color/blue"
                    android:fontFamily="@font/love_ya_like_a_sister"
                    android:text="@string/register"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="22sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/designBy_1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        android:layout_marginTop="40dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
