<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ProfileActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/blog_bg"
        android:scaleType="centerCrop"
        android:alpha="0.3"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/blogText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="60sp"
                app:fontFamily="@font/love_ya_like_a_sister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/shareText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:maxWidth="450dp"
                android:minWidth="350dp"
                android:text="@string/share_your_story"
                android:textAlignment="center"
                android:textSize="30sp"
                app:fontFamily="@font/love_ya_like_a_sister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/blogText" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/user"
                app:civ_border_overlay="true"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/dark_gray"
                app:civ_circle_background_color="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shareText"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="-37dp"
                android:scaleType="centerCrop"
                android:src="@drawable/add"
                app:civ_circle_background_color="@color/toolbar_color"
                app:layout_constraintStart_toStartOf="@id/profilePic"
                app:layout_constraintTop_toBottomOf="@id/profilePic" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center"
                android:maxWidth="450dp"
                android:minWidth="350dp"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toBottomOf="@id/profilePic">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxStrokeWidth="2dp"
                    android:hint="@string/hintName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:drawableStart="@drawable/person"
                        android:drawableTint="@color/black"
                        android:drawablePadding="15dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxStrokeWidth="2dp"
                    android:hint="@string/hintEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:drawableStart="@drawable/email"
                        android:drawableTint="@color/black"
                        android:drawablePadding="15dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gender"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:layout_weight="1"/>
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:textAlignment="center"
                        android:paddingStart="20dp"
                        android:background="@drawable/spinner_bg"
                        android:layout_weight="4"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>





                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:layout_marginTop="5dp"
                    app:boxStrokeWidth="2dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:drawableStart="@drawable/age"
                        android:drawablePadding="15dp"
                        android:drawableTint="@color/black"

                        />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>



            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"

                app:layout_constraintEnd_toEndOf="@+id/constraint"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toBottomOf="@+id/linear">




                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="15dp"
                    android:text="@string/next"
                    android:hapticFeedbackEnabled="true"
                    android:textSize="20sp"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/love_ya_like_a_sister"
                android:text="@string/designBy_1"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toBottomOf="@id/linear2"
                android:layout_marginTop="30dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>